Mixin: use Collections.unmodifiableList (Java 8) instead of List.copyOf